# Facebook-Marketplace-Lowballer

./: .env.example  .gitignore  CONTRIBUTING.md  GIT_SETUP_SUMMARY.md  MVP_QUICKSTART.md  README.md  SETUP.md  deal-scout-mvp-prompts.md  docker-compose.yml  requirements.txt  setup.py  start-api.sh  start-dev.sh  turbo.json
apps/api/: pyproject.toml
apps/api/src/: __init__.py  db.py  main.py
apps/api/src/agents/: __init__.py  negotiation_agent.py  negotiation_state.py  negotiation_strategy.py
apps/api/src/agents/prompts/: __init__.py  negotiation.py
apps/api/src/models/: __init__.py  deal.py  listing.py  negotiation.py  search.py
apps/api/src/routers/: __init__.py  deals.py  ebay_notifications.py  negotiate.py  negotiations.py  search.py
apps/api/src/services/: __init__.py  enhanced_deal_viewer.py
apps/api/src/services/browser/: __init__.py  extractor.py  mcp_client.py  scraper.py  scraper_fixed.py
apps/api/src/services/ebay/: __init__.py  deal_analyzer.py  ebay_client.py  query_optimizer.py
apps/api/src/services/negotiation/: __init__.py  manager.py  state_machine.py
apps/api/src/services/reseller/: __init__.py  hot_deals.py  scorer.py
apps/api/src/services/search/: __init__.py  query_generator.py  search_orchestrator.py  url_builder.py
docs/: ARCHITECTURE.md  EBAY_INTEGRATION.md
scripts/: clear_deals.py
src/: __init__.py  extraction_engine.py  main.py  models.py  scroll_handler.py  url_builder.py
tests/: test_agent_properties.py  test_chrome_navigator_properties.py  test_config.py  test_error_handling_properties.py  test_models_properties.py  (+7 more)
(+27 files in other folders)
