[project]
name = "dealscout-api"
version = "0.1.0"
description = "FastAPI backend for Deal Scout"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
